# Kaggle-SpaceShipTitanic

./: .gitignore  Dockerfile  MachineLearning.ipynb  README.md  flask_app.py  main.py  model.py  pyproject.toml  requirements.txt  submission.csv
data/: results.csv
model/: model.pkl  tuned_model.pkl
notebooks/: SpaceShipTitanic.ipynb  submission.csv
