[tool.poetry]
name = "machinelearning"
version = "0.1.0"
description = ""
authors = ["NikSuperPlay <NikSuperPlay123@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.5"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
numpy = "^1.26.4"
jupyter = "^1.0.0"
flask = "^3.0.2"
optuna = "^3.5.0"
pandas = "^2.2.1"
catboost = "^1.2.3"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
